maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:4: error: not found: value r
    r = random3()
    ^RandomMouseMaze:5: error: not found: value r
    if(r == 0) {
       ^RandomMouseMaze:7: error: not found: value r
    } else if(r == 1) {
              ^