maze.randommouse.RandomMouseMaze.scala.code
override def run() {
	while(estSurBiscuit()) {
    r = random3()
    if(r == 0) {
      droite()
    } else if(r == 1) {
      gauche()
    } else if(estFaceMur()){
      avance()
    }
  }
  prendBiscuit()
}